Bootstrap for booking,container and container_status

--- a/myapp/templates/booking/booking_list.html
+++ b/myapp/templates/booking/booking_list.html
@@ -1,10 +1,23 @@
-<h2>Bookings</h2>
-<a href="{% url 'booking_create' %}">Add Booking</a>
-<ul>
-    {% for booking in bookings %}
-        <li>{{ booking.booking_number }} - {{ booking.origin }} to {{ booking.destination }}
-            <a href="{% url 'booking_update' booking.booking_id %}">Edit</a> |
-            <a href="{% url 'booking_delete' booking.booking_id %}">Delete</a>
-        </li>
-    {% endfor %}
-</ul>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+<div class="container mt-5">
+    <div class="card">
+        <div class="card-header">
+            <h2>Bookings</h2>
+        </div>
+        <div class="card-body">
+            <a href="{% url 'booking_create' %}" class="btn btn-success mb-3">Add Booking</a>
+            <ul class="list-group">
+                {% for booking in bookings %}
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        <span>{{ booking.booking_number }} - {{ booking.origin }} to {{ booking.destination }}</span>
+                        <span>
+                            <a href="{% url 'booking_update' booking.booking_id %}" class="btn btn-primary btn-sm">Edit</a>
+                            <a href="{% url 'booking_delete' booking.booking_id %}" class="btn btn-danger btn-sm">Delete</a>
+                        </span>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+</div>
