--- a/myapp/templates/booking/booking_form.html
+++ b/myapp/templates/booking/booking_form.html
@@ -1,6 +1,55 @@
-<h2>Booking Form</h2>
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Save</button>
-</form>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+<div class="container mt-5">
+    <div class="card">
+        <div class="card-header">
+            <h2>Booking Form</h2>
+        </div>
+        <div class="card-body">
+            <form method="POST" class="form-horizontal">
+                {% csrf_token %}
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Booking Number</label>
+                    <div class="col-sm-10">
+                        {{ form.booking_number }}
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Customer</label>
+                    <div class="col-sm-10">
+                        {{ form.customer }}
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Origin</label>
+                    <div class="col-sm-10">
+                        {{ form.origin }}
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Destination</label>
+                    <div class="col-sm-10">
+                        {{ form.destination }}
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Created by</label>
+                    <div class="col-sm-10">
+                        {{ form.created_by }}
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Status</label>
+                    <div class="col-sm-10">
+                        {{ form.status }}
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-sm-10 offset-sm-2">
+                        <button type="submit" class="btn btn-primary">Save</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
