--- a/myapp/templates/container/container_form.html
+++ b/myapp/templates/container/container_form.html
@@ -1,6 +1,61 @@
-<h2>Container Form</h2>
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Save</button>
-</form>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+<div class="container mt-5">
+    <div class="card">
+        <div class="card-header">
+            <h2>Container Form</h2>
+        </div>
+        <div class="card-body">
+            <form method="POST" class="form-horizontal">
+                {% csrf_token %}
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Booking</label>
+                    <div class="col-sm-10">
+                        {{ form.booking }}
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Size</label>
+                    <div class="col-sm-10">
+                        {{ form.size }}
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Weight</label>
+                    <div class="col-sm-10">
+                        {{ form.weight }}
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Contents</label>
+                    <div class="col-sm-10">
+                        {{ form.contents }}
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Status</label>
+                    <div class="col-sm-10">
+                        {{ form.status }}
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Delivered at</label>
+                    <div class="col-sm-10">
+                        {{ form.delivered_at }}
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Received by</label>
+                    <div class="col-sm-10">
+                        {{ form.received_by }}
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-sm-10 offset-sm-2">
+                        <button type="submit" class="btn btn-primary">Save</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
