--- a/myapp/templates/container_status/container_status_form.html
+++ b/myapp/templates/container_status/container_status_form.html
@@ -1,6 +1,16 @@
-<h2>Container Status Form</h2>
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Save</button>
-</form>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+<div class="container mt-5">
+    <div class="card">
+        <div class="card-header">
+            <h2>Container Status Form</h2>
+        </div>
+        <div class="card-body">
+            <form method="POST" class="form-horizontal">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="btn btn-primary mt-3">Save</button>
+            </form>
+        </div>
+    </div>
+</div>
