--- a/myapp/templates/container_status/container_status_list.html
+++ b/myapp/templates/container_status/container_status_list.html
@@ -1,10 +1,23 @@
-<h2>Container Statuses</h2>
-<a href="{% url 'container_status_create' %}">Add Status</a>
-<ul>
-    {% for status in statuses %}
-        <li>{{ status.status }} - {{ status.recipient_name }}
-            <a href="{% url 'container_status_update' status.status_id %}">Edit</a> |
-            <a href="{% url 'container_status_delete' status.status_id %}">Delete</a>
-        </li>
-    {% endfor %}
-</ul>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+<div class="container mt-5">
+    <div class="card">
+        <div class="card-header">
+            <h2>Container Statuses</h2>
+        </div>
+        <div class="card-body">
+            <a href="{% url 'container_status_create' %}" class="btn btn-success mb-3">Add Status</a>
+            <ul class="list-group">
+                {% for status in statuses %}
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        <span>{{ status.status }} - {{ status.recipient_name }}</span>
+                        <span>
+                            <a href="{% url 'container_status_update' status.status_id %}" class="btn btn-primary btn-sm">Edit</a>
+                            <a href="{% url 'container_status_delete' status.status_id %}" class="btn btn-danger btn-sm">Delete</a>
+                        </span>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+</div>
