--- a/myapp/templates/customers/customer_list.html
+++ b/myapp/templates/customers/customer_list.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -178,7 +179,7 @@
 </head>
 <body>
   <div class="sidebar">
-    <img src="logo.png" alt="Logo">
+    <img src="{% static 'images/logo.png' %}" alt="Logo">
     <a href="#"><span class="icon">🏠</span> Dashboard</a>
     <a href="{% url 'customer_list' %}" class="active"><span class="icon">👤</span> Customer Hub</a>
     <a href="{% url 'booking_list' %}"><span class="icon">📦</span> Booking Hub</a>
