--- a/myapp/templates/customers/customer_form.html
+++ b/myapp/templates/customers/customer_form.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -115,13 +116,13 @@
 </head>
 <body>
   <div class="sidebar">
-    <img src="logo.png" alt="Logo">
+    <img src="{% static 'images/logo.png' %}" alt="Logo">
     <a href="#"><span class="icon">🏠</span> Dashboard</a>
     <a href="{% url 'customer_list' %}" class ="active"><span class="icon">👤</span> Customer Hub</a>
     <a href="{% url 'booking_list' %}"><span class="icon">📦</span> Booking Hub</a>
     <a href="{% url 'container_list' %}"><span class="icon">🚛</span> Container Hub</a>
     <a href="#"><span class="icon">👥</span> Driver</a>
-    <a href="{% url 'user_list' %}" class="active"><span class="icon">👤</span> User Hub</a>
+    <a href="{% url 'user_list' %}"><span class="icon">👤</span> User Hub</a>
     <a href="#"><span class="icon">🔒</span> Security</a>
     <a href="#"><span class="icon">🔔</span> Notification</a>
     <div class="bottom-links">
